fix(menu): Fix menus overflowing the screen and not scrolling

--- a/packages/@streamjar/ui-shared/styles/components/menu/menu.scss
+++ b/packages/@streamjar/ui-shared/styles/components/menu/menu.scss
@@ -7,6 +7,8 @@
 	overflow: hidden;
 	z-index: 10000;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+	overflow-x: hidden;
+	overflow-y: auto;
 
 	#{"/deep/"} button {
 		padding: 0;
